Unit Test UpDate